app/fireeth_k8s/reader-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-svc
spec:
  type: ClusterIP
  selector:
    app: reader-node
  ports:
    - name: grpc
      port: 10010
      protocol: TCP
      targetPort: 10010
    - name: node-mgr
      port: 10011
      protocol: TCP
      targetPort: 10011
    - name: geth-auth
      port: 8551
      protocol: TCP
      targetPort: 8551
    - name: peer-tcp
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: peer-udp
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: prom
      port: 9102
      protocol: TCP
      targetPort: 9102
